# escritorios-virtuales

./: DESARROLLO.md  EMPEZAR_AQUI.md  ESTRUCTURA_PROYECTO.txt  INDICE_DOCUMENTACION.md  INICIO_RAPIDO.md  INSTALACION_LOCAL.md  LEEME_PRIMERO.txt  LICENSE  MANIFEST.in  README.md  RESUMEN_PROYECTO.md  prueba_rapida.py  pyproject.toml
ejemplos/: 01_listar_escritorios.py  02_crear_y_cambiar.py  03_gestionar_ventanas.py  04_escenarios_practicos.py  README.md
