[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "escritorios-virtuales"
version = "1.0.0"
description = "Librería Python para gestionar escritorios virtuales de Windows usando ctypes puro"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "XeBoLaX"}
]
keywords = ["windows", "escritorios virtuales", "virtual desktop", "ctypes", "win32"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/hxebolax/escritorios-virtuales"
"Bug Tracker" = "https://github.com/hxebolax/escritorios-virtuales/issues"
"Documentation" = "https://github.com/hxebolax/escritorios-virtuales#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["escritorios_virtuales*"]
exclude = ["tests*", "ejemplos*"]
